# CMS-Planner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: PLAN.md
src/: CMakeLists.txt
src/item/: CMakeLists.txt
src/item/include/cmsp/item/: item.h
src/item/src/: item.cpp
src/manufacturer/: CMakeLists.txt
src/manufacturer/include/cmsp/manufacturer/: manufacturer.h
src/manufacturer/src/: manufacturer.cpp
src/ore/: CMakeLists.txt
src/ore/include/cmsp/ore/: ore.h
src/ore/src/: ore.cpp
src/product/: CMakeLists.txt
src/product/include/cmsp/product/: product.h
src/product/src/: product.cpp
tests/: CMakeLists.txt  test_item.cpp  test_manufacturer.cpp  test_ore.cpp  test_product.cpp  test_test.cpp
